# strategic-tactical-pandora

./: CMakeLists.txt  LICENSE  Makefile.am  README  README.md  manifest.xml  run_experiments.bash  run_planner.bash
cp/cp_vrp/: Makefile.linux  Makefile.osx  main.cpp  makefile  problem.cpp  problem.h  solver.cpp  solver.h
cp/pddl2vrp/: action.py  p2vrp.py  pddl.py
cp/vrp_probs/: mission_10_0.pddl.vrp  mission_10_0.pddl.vrp~  mission_10_1.pddl.vrp  mission_10_2.pddl.vrp  mission_15_0.pddl.vrp  mission_15_1.pddl.vrp  mission_15_2.pddl.vrp  mission_20_0.pddl.vrp  mission_20_1.pddl.vrp  mission_20_2.pddl.vrp  mission_25_0.pddl.vrp  mission_25_1.pddl.vrp  mission_25_2.pddl.vrp  mission_30_0.pddl.vrp  mission_30_1.pddl.vrp  mission_30_2.pddl.vrp  mission_5_0.pddl.vrp  mission_5_0.pddl.vrp~
data/: visualiser.rviz
data/heightmaps/: heightmap.raw
data/models/: dragon-animated.blend  dragon-animated.fbx  snake_pattern.tga  submarine.dae  submarine.urdf
data/textures/: beech.tga  eroded_metal.tga  gold.tga  gui.tga  height.tga  icons.tga  light_point.tga  particle.tga  smoke_particle.tga  underwater_height.tga  waterbubble.tga
experiments/: .pddl  mission_10_0.xml.pddl  mission_10_1.xml.pddl  mission_10_2.xml.pddl  mission_15_0.xml.pddl  mission_15_1.xml.pddl  mission_15_2.xml.pddl  mission_20_0.xml.pddl  mission_20_1.xml.pddl  mission_20_2.xml.pddl  mission_25_0.xml.pddl  mission_25_1.xml.pddl  mission_30_0.xml.pddl  mission_30_1.xml.pddl  mission_30_2.xml.pddl  mission_35_2.xml.pddl
experiments-single/: mission_10_0.xml.pddl  mission_10_1.xml.pddl  mission_10_2.xml.pddl  mission_15_0.xml.pddl  mission_15_1.xml.pddl  mission_15_2.xml.pddl  mission_20_0.xml.pddl  mission_20_1.xml.pddl  mission_20_2.xml.pddl  mission_25_0.xml.pddl  mission_25_1.xml.pddl  mission_30_0.xml.pddl  mission_30_1.xml.pddl  mission_30_2.xml.pddl  mission_35_2.xml.pddl
launch/: robot_description.launch
planner/src/kcl_pandora/knowledge_msgs/: CMakeLists.txt  package.xml
planner/src/kcl_pandora/knowledge_msgs/msg/: DataProperty.msg  Filter.msg  KnowledgeObject.msg  Notification.msg  ObjectProperty.msg  String.msg
planner/src/kcl_pandora/knowledge_msgs/srv/: KnowledgeInterface.srv  RoadmapRefresh.srv
planner/src/kcl_pandora/planning_msgs/: CMakeLists.txt  mainpage.dox  package.xml
planner/src/kcl_pandora/planning_msgs/action/: SearchForChain.action
planner/src/kcl_pandora/planning_msgs/msg/: ActionDispatch.msg  CompletePlan.msg
planner/src/kcl_pandora/planning_msgs/srv/: AddInstanceOfType.srv  GetAttributesOfInstance.srv  GetAttributesOfType.srv  GetInstancesOfType.srv  GetSubTypes.srv
planner/src/kcl_pandora/planning_system/: CMakeLists.txt  package.xml  planning_system.kdev4
planner/src/kcl_pandora/planning_system/.kdev4/: planning_system.kdev4
planner/src/kcl_pandora/planning_system/data/: IPs.txt  WPs.txt  config.txt  config_girona.txt  config_girona_1600.txt  config_girona_3600.txt  config_girona_7200.txt  config_uwsim.txt  live_output_blocked.txt  live_output_missing.txt  pandora_domain_old.pddl  pandora_domain_persistent.pddl  pandora_domain_strategic.pddl  pandora_problem_Mission0.pddl  pandora_problem_Mission1.pddl  pandora_problem_Mission100.pddl  pandora_problem_Mission101.pddl  pandora_problem_Mission106.pddl  pandora_problem_Mission107.pddl  pandora_problem_Mission108.pddl  pandora_problem_Mission109.pddl  pandora_problem_Mission11.pddl  pandora_problem_Mission110.pddl  pandora_problem_Mission111.pddl  pandora_problem_Mission112.pddl  pandora_problem_Mission113.pddl  pandora_problem_Mission114.pddl  pandora_problem_Mission115.pddl  pandora_problem_Mission116.pddl  pandora_problem_Mission117.pddl  pandora_problem_Mission118.pddl  pandora_problem_Mission119.pddl  pandora_problem_Mission12.pddl  pandora_problem_Mission120.pddl  pandora_problem_Mission121.pddl  pandora_problem_Mission122.pddl  pandora_problem_Mission123.pddl  pandora_problem_Mission124.pddl  pandora_problem_Mission125.pddl  pandora_problem_Mission128.pddl  (+366 more)
planner/src/kcl_pandora/planning_system/launch/: hwu_planning_system.launch  kcl_planning_system.launch  udg_planning_system.launch
planner/src/kcl_pandora/planning_system/src/: ActionDispatch.h  ActionFeedback.cpp  ChainSearcher.cpp  ChainSearcher.h  PDDLProblemGenerator.cpp  PlanningEnvironment.h  PlanningLoop.cpp  PostProcess.cpp  PublishMarkerArray.cpp  SensorFeedback.cpp  StrategicProblemGenerator.cpp  Utilities.h  VisualiserTimer.cpp  VisualiserTimer.h
planner/src/kcl_pandora/planning_system/src/roadmap/: Roadmap.h  RoadmapGenerator.cpp
planner/src/kcl_pandora/planning_system/src/util/: EnergyTester.cpp  Listener.cpp  PlanVisualisation.cpp  TrajectoryTester.cpp  ValveTester.cpp
shaders/: CreateAnimatedShadowMap.vert  CreateShadowMap.frag  CreateShadowMap.vert  ParticleCalculator.vert  ShadowVolume.frag  ShadowVolume.vert  animated-shadow.vert  basic-shadow.frag  basic-shadow.vert  font.frag  font.vert  godrays.frag  godrays.vert  light_body_frag.inc  light_body_vert.inc  light_header.inc  light_header_frag.inc  light_header_vert.inc  line.frag  line.vert  merge_fbos.frag  particle.frag  particle.vert  particle_bb.geom  reflection.frag  reflection.vert  skybox.frag  skybox.vert  terrain.frag  toon.frag  toon.vert  underwater.frag  underwater.vert  water.frag  water.vert
src/: Main.cpp  example.cpp  example.h
src/demo/: AnimationTest.cpp  AnimationTest.h  ApplicationInterface.h  FBXLoaderDemo.cpp  FBXLoaderDemo.h  FallingBlock.cpp  FallingBlock.h  FlatDemo.cpp  FlatDemo.h  FrustumCullingExample.cpp  FrustumCullingExample.h  GUITester.cpp  GUITester.h  LoaderExample.cpp  LoaderExample.h  PLFDemo.cpp  PLFDemo.h  Pandora.cpp  Pandora.h  PandoraPillarExperiment.cpp  PandoraPillarExperiment.h  ParticleTest.cpp  ParticleTest.h  TestScene1.cpp  TestScene1.h  VolumetricLightDemo.cpp  VolumetricLightDemo.h  ZombieHorde.cpp  ZombieHorde.h
src/effects/: GodRays.cpp  GodRays.h  Reflection.cpp  Reflection.h
src/shapes/: AnimatedShape.cpp  AnimatedShape.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  FrustumShape.cpp  FrustumShape.h  Line.cpp  Line.h  (+16 more)
(+496 files in other folders)
