<?xml version="1.0"?>
<package>
  <name>knowledge_msgs</name>
  <version>0.0.0</version>
  <description>knowledge_msgs knowledge_msgs</description>

  <maintainer email="hwu@todo.todo">Francesco</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/simulation</url>
  <author email="hwu@hwu.ac.uk">Francesco</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>planning_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>planning_msgs</run_depend>

  <export>
  </export>

</package>
