<?xml version="1.0"?>
<package>
  <name>planning_system</name>
  <version>0.0.0</version>
  <description>Deliberative layer; dispatches actions for the PANDORA architecture.</description>
  <maintainer email="arnau@todo.todo">arnau</maintainer>
  <author>michael</author>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>planning_msgs</build_depend>
  <build_depend>knowledge_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pose_ekf_slam</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>planning_msgs</run_depend>
  <run_depend>knowledge_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pose_ekf_slam</run_depend>
  <run_depend>auv_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>cmake_modules</run_depend>

  <export>
  </export>
</package>
